Modified Design Corrections in Todo and Task pane index file alignment applied to app.scss file in TaskList page.

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,3 +11,9 @@
 	margin-left: 45%;
 	text-align: center;
 }
+h1{
+	color: rgb(201 75 34 / 54%);
+}
+.taskButton{
+	margin:3px;
+}
